--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "dependencies": {
     "is-prime": "^1.0.1",
     "number-is-integer": "^1.0.0"
+  },
+  "devDependencies": {
+    "mocha": "*"
   }
 }
